--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -2,7 +2,28 @@
     max-width: 50%;
     margin: 0 auto;
 }
-
 .detail h2 {
     margin: 20px 0 0 10px;
+}
+.detail h3 {
+    margin: 20px 0 0 10px;
+}
+.to-list {
+    text-align: center;
+}
+.to-edit {
+    text-align: right;
+    line-height: 3rem;
+}
+.to-edit button, input[type=submit] {
+    display:inline-block;
+    padding: 5px 10px;
+    border-style: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+.to-edit input[type=submit] {
+    
+    background-color: lightcoral;
+    color: white;
 }
