--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -27,3 +27,18 @@
     background-color: lightcoral;
     color: white;
 }
+.skills {
+    margin: 0;
+    padding: 0;
+}
+.skills li {
+    font-size: 0.8rem;
+    display: inline-block;
+    border-radius: 5px;
+    background-color: blue;
+    color: white;
+    padding: 2px 10px;
+    opacity: 0.7;
+    margin-right: 5px;
+    margin-top: 5px;
+}
