--- a/public/css/list.css
+++ b/public/css/list.css
@@ -1,27 +1,55 @@
-ul.items {
-    display: flex;
+.items {
+    width: 100%;
     padding: 0;
+    font-size: 0;
 }
-.items li {
-    display: block;
+.item {
+    display: inline-block;
+    box-sizing: border-box;
+    border: 0;
     width: 33%;
     padding: 35px;
+    margin: 0;
 }
-a.item {
+.item a{
+    position: relative;
+    margin: 0;
+    padding : 20px 20px 10px;
     text-decoration: none;
     color: inherit;
     display: block;
     border-radius: 1.2rem;
-    padding : 20px;
     box-shadow: 0 0 0.5rem rgba(0,0,0,0.2);
-    
+    height: 300px;
 }
-a.item:hover {
+.item a:hover {
     box-shadow: 0 0 0.5rem rgba(0,0,0,0.7);
     background-color: azure;
     opacity: 0.8;
     transition: background-color 0.2s;
 }
-a.item h2 {
+.item a h2 {
     margin: 0;
+    font-size: 1.2rem;
+}
+.item a p {
+    font-size: 1.2rem;
+}
+.item ul {
+    position:absolute;
+    bottom: 20px;
+
+    margin-bottom: 0;
+    padding: 0;
+}
+.item ul li {
+    font-size: 0.8rem;
+    display: inline-block;
+    border-radius: 5px;
+    background-color: blue;
+    color: white;
+    padding: 2px 10px;
+    opacity: 0.7;
+    margin-right: 5px;
+    margin-top: 5px;
 }
