--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,23 +27,31 @@ h1 a {
     text-decoration: none;
     color: inherit;
 }
-
-header p {
+header > p {
     margin: 0;
-    text-align: center;
+    margin-left: 300px;
 }
-div.user {
+nav {
     position: absolute;
     top: 10px;
     right: 10px;
 }
+/* logined */
+nav > p {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+/* no user */
+div.user {
+}
+
 div.about {
     text-align: right;
 }
 div.about a {
     display: inline;
 }
-
 .wrapper {
     max-width: 1300px;
     margin: 0 auto;
