--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,13 +1,12 @@
-html {
+body {
     background-color: #FFC526;
-    padding: 0, 20px;
+    padding: 0, 20px 20px;
     margin: 0;
 }
 
-body {
-    margin: 0 auto;
+.white {
+    margin: 0 20px 20px;
     padding: 20px 20px 0;
-    max-width: 1600px;
     background-color: white;
     border-radius: 0 0 10px 10px;
 }
