--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -22,8 +22,7 @@
     font-size: 1.2rem;
     font-weight: bold;
 }
-.to-edit input[type=submit] {
-    
+input[type=submit] {
     background-color: lightcoral;
     color: white;
 }
@@ -41,4 +40,28 @@
     opacity: 0.7;
     margin-right: 5px;
     margin-top: 5px;
+}
+
+.user {
+    width: 50%;
+    margin: auto;
+}
+.userName {
+    text-align: right;
+}
+.userPlans {
+    display: inline-block;
+    width: 33%;
+    vertical-align: top;
+}
+.userLikes {
+    display: inline-block;
+    width: 33%;
+    vertical-align: top;
+}
+.userDelete {
+    text-align: right;
+}
+.userDelete input:hover {
+    cursor: pointer;
 }
