--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,7 @@ body {
 
 ul {
     list-style: none;
+    padding: 0;
 }
 header {
     position: relative;
@@ -42,8 +43,7 @@ nav > p {
 }
 
 /* no user */
-div.user {
-}
+
 
 div.about {
     text-align: right;
@@ -74,4 +74,9 @@ footer li a {
 footer li:last-child {
     display: block;
     text-align: center;
+}
+
+.aboutPage {
+    width: 50%;
+    margin: auto;
 }
