--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -65,3 +65,11 @@ input[type=submit] {
 .userDelete input:hover {
     cursor: pointer;
 }
+
+.like-button button {
+    display:inline-block;
+    padding: 5px 10px;
+    border-style: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
