--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,17 +29,17 @@ h1 a {
 }
 header > p {
     margin: 0;
-    margin-left: 300px;
 }
-nav {
+header > nav {
+    text-align: right;
     position: absolute;
     top: 10px;
     right: 10px;
 }
 /* logined */
-nav > p {
+header > nav > p {
     display: inline-block;
-    margin-left: 20px;
+    margin: 0 20px 10px 0;
 }
 
 /* no user */
