--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -72,4 +72,5 @@ input[type=submit] {
     border-style: none;
     font-size: 1.2rem;
     font-weight: bold;
+    background-color: rgb(192, 192, 192);
 }
