--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -1,76 +1,58 @@
-.detail {
-    max-width: 50%;
-    margin: 0 auto;
+/* plan detail*/
+.detail.plan table {
+    width: 100%;
+    text-align: left;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
-.detail h2 {
-    margin: 20px 0 0 10px;
+.detail.plan tr, .detail.plan th, .detail.plan td {
+    border: 1px solid #ccc;
+    padding: 0.5rem;
 }
-.detail h3 {
-    margin: 20px 0 0 10px;
+.detail.plan th {
+    background-color: #eee;
+    padding-left: 1rem;
 }
-.to-list {
-    text-align: center;
-}
-.to-edit {
-    text-align: right;
-    line-height: 3rem;
-}
-.to-edit button, input[type=submit] {
-    display:inline-block;
-    padding: 5px 10px;
-    border-style: none;
-    font-size: 1.2rem;
-    font-weight: bold;
-}
-input[type=submit] {
-    background-color: lightcoral;
-    color: white;
-}
+
 .skills {
     margin: 0;
     padding: 0;
 }
-.skills li {
-    font-size: 0.8rem;
-    display: inline-block;
-    border-radius: 5px;
-    background-color: blue;
-    color: white;
-    padding: 2px 10px;
-    opacity: 0.7;
-    margin-right: 5px;
-    margin-top: 5px;
+.buttons {
+    margin-top: 1rem;
+    line-height: 3.4rem;
+}
+.edit {
+    text-align: right;
+}
+.like {
+    text-align: left;
 }
 
+/* user detail */
 .user {
-    width: 50%;
-    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 .userName {
     text-align: right;
 }
-.userPlans {
-    display: inline-block;
-    width: 33%;
-    vertical-align: top;
+.user h2 {
+    text-align: center;
 }
-.userLikes {
-    display: inline-block;
-    width: 33%;
-    vertical-align: top;
+.user li {
+    margin-bottom: 5px;
+}
+.user a {
+    color: blue;
+    text-decoration: underline;
+}
+.userPlans, .userLikes {
+    padding: 0.5rem;
 }
 .userDelete {
     text-align: right;
 }
 .userDelete input:hover {
     cursor: pointer;
-}
-
-.like-button button {
-    display:inline-block;
-    padding: 5px 10px;
-    border-style: none;
-    font-size: 1.2rem;
-    font-weight: bold;
-    background-color: rgb(192, 192, 192);
 }
