--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,31 +1,84 @@
+:root {
+    --main-color: #FF8D2E;
+    --accent-color: #447DFF;
+}
+
+/* global */
+html {
+    font-size: 15px;
+}
 body {
-    background-color: #FFC526;
+    background-color: var(--main-color);
     padding: 0, 20px 20px;
     margin: 0;
 }
-
+ul {
+    list-style: none;
+    padding: 0;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+/* main */
+main {
+    max-width: 1300px;
+    margin: 0 auto;
+}
 .white {
     margin: 0 20px 20px;
     padding: 20px 20px 0;
     background-color: white;
     border-radius: 0 0 10px 10px;
 }
-
-ul {
-    list-style: none;
-    padding: 0;
+.wrapper-half {
+    width: 50%;
+    margin: auto;
 }
+.button {
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+    border-style: none;
+    background-color: #ccc;
+    border-radius: 0.5rem;
+    padding: 10px 20px;
+    font-size: 1.2rem;
+}
+.button:hover {
+    cursor: pointer;
+}
+.delete {
+    background-color: lightcoral;
+    color: white;
+}
+.link-to-list {
+    margin-top: 30px;
+    text-align: center;
+    color: blue;
+    text-decoration: underline;
+}
+.skills {
+    font-size: 0;
+}
+.skill {
+    font-family: sans-serif;
+    font-size: 1rem;
+    display: inline-block;
+    border-radius: 5px;
+    background-color: var(--accent-color);
+    color: white;
+    padding: 2px 10px;
+    margin: 0.2rem 0.2rem 0 0;
+}
+
+/* header */
 header {
     position: relative;
     margin-bottom: 40px;
 }
 header h1 {
+    display: inline-block;
     margin-bottom: 50px;
-}
-h1 a {
-    
-    text-decoration: none;
-    color: inherit;
 }
 header > p {
     margin: 0;
@@ -36,25 +89,22 @@ header > nav {
     top: 10px;
     right: 10px;
 }
-/* logined */
-header > nav > p {
+header > nav li {
     display: inline-block;
     margin: 0 20px 10px 0;
+    padding-left: 0.5rem;
+    border-left: 1px solid #000;
 }
-
-/* no user */
-
-
 div.about {
     text-align: right;
 }
 div.about a {
     display: inline;
+    color: blue;
+    text-decoration: underline;
 }
-.wrapper {
-    max-width: 1300px;
-    margin: 0 auto;
-}
+
+/* footer */
 footer {
     margin: 100px 0 0;
     padding: 0;
@@ -74,9 +124,4 @@ footer li a {
 footer li:last-child {
     display: block;
     text-align: center;
-}
-
-.aboutPage {
-    width: 50%;
-    margin: auto;
 }
