--- a/public/css/post.css
+++ b/public/css/post.css
@@ -1,49 +1,38 @@
-div.post-form {
-    max-width: 50%;
-    margin: 0 auto;
-}
-.post-form h1 {
+.post h1 {
     font-size: 1.8rem;
     text-align: center;
     margin-bottom: 50px;
 }
-.post-form h2 {
+.post h2 {
     font-size: 1.2rem;
     margin: 20px 0 10px 10px;
 }
-.post-form input[type=text] {
+.post input[type=text], .post textarea {
     display: block;
     margin: 0 auto;
     width: 95%;
     font-size: 1rem;
     padding: 0.3rem;
     border-radius: 0.3rem;
+    border: 1px solid #ccc;
+    box-shadow: none;
 }
-.post-form textarea {
+.post textarea {
+    height: 10rem;
+    resize: none;
+}
+.post input[type=submit] {
     display: block;
-    margin: 0 auto;
-    width: 95%;
-    height: 200px;
-    font-size: 1rem;
-    padding: 0.3rem;
-    border-radius: 0.3rem;
+    margin: 1.5rem 0 0 auto;
 }
-.post-form input[type=submit] {
-    display: block;
-    margin: 20px 0 0 auto;
-    padding: 10px 20px;
-    font-size: 1.2rem;
-    border-style: none;
-    border-radius: 1rem;
-}
-.post-form .errors {
+.post .errors {
     color: red;
     margin: 0;
-    padding: 0;
+    padding: 0.5rem 1.5rem;
 }
-.post-form hr {
+.post hr {
     margin: 20px 0;
-}
-.to-list {
-    text-align: center;
+    border: none;
+    height: 1px;
+    background-color: #ccc;
 }
