--- a/public/css/list.css
+++ b/public/css/list.css
@@ -20,7 +20,7 @@
     display: grid;
     padding: 1.5rem 1rem 1rem;
     height: 20rem;
-    grid-template-rows: 2rem 1fr minmax(1rem, auto);
+    grid-template-rows: minmax(1rem, auto) 1fr minmax(1rem, auto);
     font-size: 1.2rem;
 }
 .item:hover {
